api-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: global-external-managed-chat-api-gateway
spec:
  gatewayClassName: gke-l7-global-external-managed 
  listeners:
  - name: http-listener
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
