api-gateway/auth-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: auth-http-route
spec:
  parentRefs:
  - kind: Gateway
    name: global-external-managed-chat-api-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - kind: Service
          name: auth-microservice-service
          port: 8000
