api-gateway/chat-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: chat-http-route
spec:
  parentRefs:
  - kind: Gateway
    name: gke-l7-gxlb-api-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /chat
      backendRefs:
        - kind: Service
          name: chat-microservice-service
          port: 9000
